# edge_mlops

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  orchestrator.py  pyproject.toml
.github/workflows/: _pipeline.yml  chapter-02.yml  chapter-03.yml  cicd.yml
docs/: ADD_A_CHAPTER.md  ARCHITECTURE.md  CICD.md  RASPBERRY_PI_SETUP.md
monitoring/grafana/dashboards/: edge_mlops.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/prometheus/: prometheus.yml
scripts/: smoke_predict.py
src/: __init__.py
src/api/: MLproject  app.py  main.py  model_loader.py  pyproject.toml  schemas.py
src/common/: __init__.py  config.py  logging_utils.py  mlflow_utils.py  paths.py  wandb_utils.py
src/data_load/: MLproject  loader.py  main.py  pyproject.toml
src/data_preprocessing/: MLproject  main.py  pyproject.toml  transforms.py
src/data_validation/: MLproject  drift.py  eda.py  main.py  pyproject.toml
src/model_competition/: MLproject  main.py  models.py  pyproject.toml
src/register/: MLproject  main.py  pyproject.toml  registry.py
src/sweep/: MLproject  main.py  pyproject.toml  search_space.py
tests/: test_api.py  test_config.py  test_drift.py  test_models.py  test_transforms.py
