[project]
name = "edge-mlops-data-validation"
version = "0.2.0"
description = "Componente data_validation: EDA y deteccion de data drift (KS)."
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.13",
    "matplotlib>=3.8",
    "pyarrow>=16.0",
    "mlflow>=2.16",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "click>=8.1",
]
