[project]
name = "edge-mlops-register"
version = "0.2.0"
description = "Componente register: registro y promocion del modelo en MLflow Registry."
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "pyarrow>=16.0",
    "mlflow>=2.16",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "click>=8.1",
]
