[project]
name = "edge-mlops-sweep"
version = "0.2.0"
description = "Componente sweep: optimizacion de hiperparametros con Weights & Biases."
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "joblib>=1.4",
    "pyarrow>=16.0",
    "wandb>=0.17",
    "mlflow>=2.16",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "click>=8.1",
]
